wordpress-sts-vol.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-sts-vol
spec:
  selector:
    matchLabels:
      app: wordpress-sts-vol
  serviceName: wordpress-svc-headless
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress-sts-vol
    spec:
      containers:
      - name: wordpress
        image: wordpress:4.8-apache
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: wordpress-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: wordpress-data
    spec:
      accessModes: ["ReadWriteMany"]
      resources:
        requests:
          storage: 1Gi
      storageClassName: rook-ceph-block
