wordpress-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc-headless
  labels:
    app: wordpress-svc-headless
spec:
  ports:
  - name: http
    port: 80
  clusterIP: None
  selector: 
    app: wordpress-sts
