ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ing
spec:
  rules:
  - host: wordpress
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress 
          servicePort: 80
